# ChangeLog for calc-extension:

*calc-1.0:
	Martin Väth <martin at mvath.de>:
	- Do not use several number formats for output. Instead:
	- Introduce "..." special to set output base
	- Introduce '...' special to set input size
	- Remove options page
	- For all above: https://github.com/vaeth/calc-extension/issues/1

*calc-0.2:
	Martin Väth <martin at mvath.de>:
	- Provide brief description on top of page
	- Output in hexadecimal and octal only if number is larger than 7
	- Rename to calc-extension (calc was already used by legacy extension)
	- Update homepage address
	- Improve error messages for # and unexpected end = incomplete
	- Refer to # as "last" result (instead of "previous")
	- Simplify background.js

*calc-0.1:
	Martin Väth <martin at mvath.de>:
	- Initial implementation