@@ -24,12 +24,12 @@
     "description": "Announcement of available constants"
   },
   "announceSize": {
-    "message": "Input size",
-    "description": "Announcement of explanation of input size"
+    "message": "Input area size",
+    "description": "Announcement of explanation of input area size"
   },
   "textSize": {
-    "message": "'60' (0 for browser default)",
-    "description": "Describe that 'size' changes size; 0 for browser default"
+    "message": "'60:1' '60' ':1' (default size 60:1 for new input areas)",
+    "description": "Describe that '60:1' sets size of new input areas; default is 60 or 1, respectively"
   },
   "announceBase": {
     "message": "Output base",
@@ -42,6 +42,10 @@
   "announceLast": {
     "message": "Last result",
     "description": "Announcement of symbol for last result"
+  },
+  "buttonResult": {
+    "message": "=",
+    "description": "Result button"
   },
   "messageResult": {
     "message": "$RESULT$ (in base $BASE$)",
@@ -78,12 +82,12 @@
     }
   },
   "errorBadDoubleQuote": {
-    "message": "no valid \"base\" token",
-    "description": "error for bad \"base\" token"
+    "message": "syntax error in \"base\" specification",
+    "description": "error in \"base\" specification"
   },
   "errorBadSingleQuote": {
-    "message": "no valid 'input size' token",
-    "description": "error for bad 'input size' token"
+    "message": "syntax error in 'input area size' specification",
+    "description": "error in 'input area size' specification"
   },
   "errorUninitializedVariable": {
     "message": "uninitialized variable “$NAME$”",
